--- a/samsung_todo/AA59-00602A.lirc.conf
+++ b/samsung_todo/AA59-00602A.lirc.conf
@@ -1,3 +1,19 @@
+#
+# this config file was automatically generated
+# using lirc-0.9.1-git(default) on Fri Aug 14 12:25:57 2015
+#
+# contributed by Jose Riha <jose1711 gmail com>
+#
+# brand:                       Samsung
+# model no. of remote control: AA59-00602A
+# devices being controlled by this remote: Samsung UE32EH4000 TV
+#
+# Kernel revision: 3.18.10
+# Driver/device option: --driver default --device /dev/lirc0
+# Kernel modules: lirc_rpi
+# Type of device controlled: TV
+# Devices controlled: Samsung UE32EH4000 32" LED Television
+#
 # Remote layout:
 # [POWER]         [SOURCE]
 # [  1  ] [  2  ] [  3  ]
@@ -20,3 +36,69 @@
 # [EMA] [PSI] [SUB] [STO]
 # 
 # [REW] [PLA] [PAU] [FWD]
+
+begin remote
+
+  name  AA59-00602A
+  bits           16
+  flags SPACE_ENC|CONST_LENGTH
+  eps            30
+  aeps          100
+
+  header       4566  4476
+  one           600  1645
+  zero          600   523
+  ptrail        600
+  pre_data_bits   16
+  pre_data       0xE0E0
+  gap          108233
+  toggle_bit_mask 0x0
+
+      begin codes
+          KEY_POWER                0x40BF
+          KEY_CYCLEWINDOWS         0x807F
+          KEY_1                    0x20DF
+          KEY_2                    0xA05F
+          KEY_3                    0x609F
+          KEY_4                    0x10EF
+          KEY_5                    0x906F
+          KEY_6                    0x50AF
+          KEY_7                    0x30CF
+          KEY_8                    0xB04F
+          KEY_9                    0x708F
+          KEY_TEXT                 0xE0E034CB
+          KEY_PREVIOUS             0xC837
+          KEY_0                    0x8877
+          KEY_VOLUMEUP             0xE01F
+          KEY_MUTE                 0xF00F
+          KEY_CHANNELUP            0x48B7
+          KEY_VOLUMEDOWN           0xD02F
+          KEY_LIST                 0xD629
+          KEY_CHANNELDOWN          0x08F7
+          KEY_MEDIA                0x9E61
+          KEY_MENU                 0x58A7
+          KEY_SLEEP                0xF20D
+          KEY_OPTION               0xD22D
+          KEY_UP                   0x06F9
+          KEY_INFO                 0xF807
+          KEY_LEFT                 0xA659
+          KEY_SELECT               0x16E9
+          KEY_RIGHT                0x46B9
+          KEY_BACK                 0x1AE5
+          KEY_DOWN                 0x8679
+          KEY_EXIT                 0xB44B
+          KEY_RED                  0x36C9
+          KEY_GREEN                0x28D7
+          KEY_YELLOW               0xA857
+          KEY_BLUE                 0x6897
+          KEY_SWITCHVIDEOMODE      0xFC03
+          KEY_LANGUAGE             0x7C83
+          KEY_SUBTITLE             0xA45B
+          KEY_STOP                 0x629D
+          KEY_REWIND               0xA25D
+          KEY_PLAY                 0xE21D
+          KEY_PAUSE                0x52AD
+          KEY_FORWARD              0x12ED
+      end codes
+
+end remote
