remote images added

--- a/amiko/AMIKO.lirc.conf
+++ b/amiko/AMIKO.lirc.conf
@@ -11,8 +11,8 @@
 # Kernel revision: 3.18.10
 # Driver/device option: --driver default --device /dev/lirc0
 # Kernel modules: lirc_rpi
-# Type of device controlled: TV
-# Devices controlled: Simba Toys Lady Scooter
+# Type of device controlled: settop box
+# Devices controlled: AMIKO MINI HD
 #
 #
 # Remote layout:
