magio stb remote added

--- a/jvc/RM-SRCBX30.lirc.conf
+++ b/jvc/RM-SRCBX30.lirc.conf
@@ -11,7 +11,7 @@
 # Driver/device option: --driver default --device /dev/lirc0
 # Kernel modules: lirc_rpi
 # Type of device controlled: CD player
-# Devices controlled: JVC CD player
+# Devices controlled: JVC RC-BX30
 #
 # Remote layout:
 #          STOP
